--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "react": "^15.1.0",
     "babel": "*",
     "react-bootstrap": "^0.29.4",
-    "bootstrap-css-only": "^3.3.6"
+    "bootstrap-css-only": "^3.3.6",
+    "firebase": "^3.0.4"
   }
 }
