--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "~15.1.0",
     "react-bootstrap": "~0.29.4",
     "firebase": "~3.0.5",
-    "bootstrap-css-only": "~3.3.6"
+    "bootstrap-css-only": "~3.3.6",
+    "react-bootstrap-date-picker": "~3.1.0"
   }
 }
